--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://api.openweathermap.org/data/2.5/weather?q={McDonough},{GA13},{+1}&appid={c2e06340cec451ae89feb0b682c2abf3}"/>
+    <link href="https://api.openweathermap.org/data/2.5/onecall?lat=33.4473&lon=84.1469&exclude=hourly,daily&appid={c2e06340cec451ae89feb0b682c2abf3}"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
