--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
   <div class="flex-row justify-space-between col-12">
     <div class="col-12 col-md-4">
 
-      <div class="card">
-        <h3 class="card-header text-uppercase">Search By City</h3>
-        <form id="city-form" class="card-body">
-          <label class="form-lable" for="cityname">City Name</label>
-          <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
-          <button type="submit" class="btn">Get Weather</button>
-        </form>
-      </div>
+<div class="card">
+  <h3 class="card-header text-uppercase">Search By City</h3>
+    <form id="city-form" class="card-body">
+      <label class="form-lable" for="cityname">City Name</label>
+      <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
+      <button type="submit" class="btn">Get Weather</button>
+    </form>
     </div>
+</div>
 
 <!---current weather card-->
     <div class="col-12 col-md-8">
@@ -45,28 +45,26 @@
     </div>
   
 <!---search history/clear history-->
-  <div class="flex-row justify-space-between col-12">
-    <div class="col-12 col-md-4" id="search">
-      <div class="card" id="history" style="display: none;">
-        <h3 class="card-header text-uppercase">Search History <i id="trash" class='fas fa-trash'
-            title='Clear History'></i>
-        </h3>
-        <div class="card-body" id="history-buttons">
-        </div>
-      </div>
-    </div>
+<div class="flex-row justify-space-between col-12">
+  <div class="col-12 col-md-4" id="search">
+    <div class="card" id="history" style="display: none;">
+        <h3 class="card-header text-uppercase">Search History <i id="trash" class='fas fa-trash' title='Clear History'></i> </h3>
+        <div class="card-body" id="history-buttons"></div>
+  </div>
+</div>
 
 <!---5 day forecast-->
-    <div class="col-12 col-md-8">
-      <div class="card hidden" id="five-day-card">
-        <h2 class="card-header" id="five-day-head">5-Day Forecast</h2>
-        <div class="card-body flex-row justify-space-around" id="five-day-body">
-        </div>
-      </div>
-    </div>
+<div class="col-12 col-md-8">
+  <div class="card hidden" id="five-day-card">
+      <h2 class="card-header" id="five-day-head">5-Day Forecast</h2>
+    <div class="card-body flex-row justify-space-around" id="five-day-body"></div>
+  </div>
+</div>
+
+
 </main>
-   </body>
-    </main>
-	<script src="/weather-dashboard/assets/js/script.js"></script>
-  </body>
+</body>
+</main>
+<script src="/weather-dashboard/assets/js/script.js"></script>
+</body>
 </html>
